# python_project_template

./: .gitignore  LICENSE  README.md  copier.yml
template/: .env.example.jinja  .gitignore  CLAUDE.md.jinja  README.md  README.md.jinja  alembic.ini.jinja  docker-compose.yml  docker-compose.yml.jinja  pyproject.toml  pyproject.toml.jinja
template/alembic/: env.py.jinja
template/docs/: project-structure.md
template/scripts/: migrate-all.ps1.jinja  migrate-all.sh.jinja
template/src/projekt/: __init__.py
template/src/projekt/cli/: __init__.py  main.py
template/src/projekt/common/: __init__.py
template/src/projekt/data/: __init__.py
template/src/projekt/gui/: app.py
template/src/projekt/resources/: config.yaml  logging.yaml
template/src/projekt/web/: __init__.py  app.py
template/src/{{ package_slug }}/cli/: main.py.jinja
template/src/{{ package_slug }}/common/: config.py  config.py.jinja  logging.py
template/src/{{ package_slug }}/core/: __init__.py
template/src/{{ package_slug }}/data/: engine.py.jinja  session.py.jinja
template/src/{{ package_slug }}/gui/: __init__.py  app.py.jinja
template/src/{{ package_slug }}/web/: app.py.jinja
template/tests/: conftest.py  test_smoke.py  test_smoke.py.jinja
